# LinguAligner

./: .gitignore  LICENSE  README.md  pyproject.toml  teste.ipynb
LinguAligner/: __init__.py  aligners.py  multiple_translations.py  translation.py  utils.py
notebooks/T2S_LUSA/: lusa_align.ipynb  lusa_entries.pkl
notebooks/WIKIEVENTS/: lookupTable_entities.json  translate_wikievents.ipynb
resources/: resource.json
translated_datasets/ACE-2005/: README.md  sample_en.json  sample_pt.json  sample_pt_aligned.json
translated_datasets/MAVEN/: README.md
translated_datasets/T2S_LUSA/: README.md
translated_datasets/T2S_LUSA/ablation/: ablation.ipynb
translated_datasets/T2S_LUSA/ablation/no_Mtrans/annotation/lusa_100.zip/: INITIAL_CAS.json
translated_datasets/T2S_LUSA/aligned/: lusa_100.json  lusa_104.json  lusa_11.json  lusa_112.json  lusa_20.json  lusa_30.json  lusa_34.json  lusa_38.json  lusa_4.json  lusa_47.json  lusa_60.json  lusa_67.json  lusa_77.json  lusa_79.json  lusa_80.json  lusa_83.json  lusa_86.json  lusa_96.json  lusa_97.json
translated_datasets/T2S_LUSA/reviewed/: lusa_100.json  lusa_104.json  lusa_11.json  lusa_112.json  lusa_20.json  lusa_30.json  lusa_34.json  lusa_38.json  lusa_4.json  lusa_47.json  lusa_60.json  lusa_67.json  lusa_77.json  lusa_79.json  lusa_80.json  lusa_83.json  lusa_86.json  lusa_96.json  lusa_97.json
translated_datasets/WikiEvents/: README.md  dev_pt.jsonl  test_pt.jsonl
translation_examples/T2S_LUSA/: lookupTable_annotations.json
translation_examples/WIKIEVENTS/: lookupTable_triggers.json
(+74 files in other folders)
