[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "LinguAligner"
authors = [{name = "lfc", email = "lfc@di.uminho.pt"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "transformers[torch]",
    "spacy",
    "deep_translator",
    "deepl",
    "requests",
    "uuid",
    "fuzzywuzzy"
]

[project.urls] 
Homepage = "https://github.com/lfcc1/LinguAligner"
Issues = "https://github.com/lfcc1/LinguAligner/issues"